# akashic

./: .gitignore  Cargo.toml  README.md  chars.txt  convert.js  crypt.js  game.json  index.js  package.json
.cargo/: config
akashic/: Cargo.toml  game.json  package.json
akashic-boot/: Cargo.toml
akashic-boot/src/: main.rs
akashic-macro/: Cargo.toml
akashic-macro/src/: asset.rs  cacheable.rs  children.rs  entity.rs  event.rs  lib.rs  modified.rs  object2d.rs  param.rs  scene.rs  trigger.rs
akashic-rs/: Cargo.toml
akashic-rs/src/: asset.rs  common_offset.rs  entity.rs  error.rs  event.rs  filled_rect.rs  font.rs  game.rs  lib.rs  object_2d_parameter.rs  param.rs  parent.rs  player.rs  random.rs  resource_factory.rs  scene.rs  trigger.rs  util.rs
akashic-rs/src/asset/: src.rs  surface.rs
akashic-rs/src/entity/: filled_rect.rs  label.rs  sprite.rs
akashic-rs/src/event/: message.rs  point.rs
akashic-rs/src/font/: bitmap.rs  dynamic.rs  font_family.rs
akashic-rs/src/font/bitmap/: glyph_area.rs  glyph_info.rs
akashic-rs/src/game/: vars.rs
akashic-rs/src/object2d/: entity.rs
akashic-rs/src/object2d/entity/: cacheable.rs  filled_rect.rs  sprite.rs
akashic-rs/src/object2d/entity/cacheable/: label.rs
akashic-rs/src/scene/: param.rs
akashic-rs/src/trigger/: join.rs  on_point_down.rs  on_update.rs  point_move.rs  point_up.rs
akashic-rs/src/trigger/point/: point_down.rs
akashic-rs/src/util/: into_js_value.rs
akashic-ts/: game.json  package-lock.json  package.json  tsconfig.json
akashic-ts/src/: main.ts
akashic/script/: bevy-akashic.wasm  crypto.js  game.js  game.wasm  game_bg.wasm  main.js
akashic/src/: asset.rs  game.rs  lib.rs  parent.rs  random.rs  scene.rs  trigger.rs  util.rs
assets/shaders/: shader.wgsl
bevy-akashic/: Cargo.toml
bevy-akashic-engine/: Cargo.toml
bevy-akashic-engine/src/: asset.rs  command.rs  component.rs  event.rs  extensions.rs  lib.rs  plugin.rs  resource.rs  run_criteria.rs  trigger.rs
bevy-akashic-engine/src/asset/: game.rs
bevy-akashic-engine/src/command/: append.rs  audio.rs
bevy-akashic-engine/src/command/audio/: play.rs
bevy-akashic-engine/src/component/: entity.rs  entity_size.rs  filled_rect.rs  label.rs  object2d.rs  previous_transform.rs  scene.rs  sprite.rs  text.rs  transform.rs
bevy-akashic-engine/src/component/entity/: filled_rect.rs  label.rs  sprite.rs
bevy-akashic-engine/src/component/object2d/: anchor.rs  entity.rs  entity_size.rs  touchable.rs
bevy-akashic-engine/src/component/object2d/entity/: entity_bundle.rs  filled_rect.rs  label.rs
bevy-akashic-engine/src/event/: event_inner.rs  join.rs  message.rs  point_down.rs  point_move.rs  point_up.rs
bevy-akashic-engine/src/event/message/: request_raise_event.rs
bevy-akashic-engine/src/plugin/: akashic_entity_map.rs  append.rs  asset.rs  despawn.rs  event.rs  feed.rs  game_state.rs  join.rs  label.rs  modify.rs  player_id.rs  point_down.rs  render.rs  scene.rs  schedule_runner.rs  scheduler.rs  system_set.rs  transform.rs
bevy-akashic-engine/src/plugin/feed/: entity_object2d.rs  filled_rect.rs  label.rs
bevy-akashic-engine/src/resource/: game.rs  game_state.rs  join.rs
bevy-akashic-engine/src/trigger/: point_down.rs
bevy-akashic-patch/: Cargo.toml
bevy-akashic-patch/src/: asset.rs  input.rs  lib.rs  window.rs  winit.rs
bevy-akashic-patch/src/input/: akashic_pointer.rs  focus.rs  mouse.rs  point.rs  pointer.rs  touch.rs  wheel_scroll.rs  window_resize.rs
bevy-akashic-patch/src/input/akashic_pointer/: down.rs  move.rs  rapier.rs  raycast.rs  up.rs
bevy-akashic-patch/src/input/mouse/: click.rs  move.rs  up.rs
bevy-akashic-patch/src/input/point/: down.rs  move.rs  up.rs
bevy-akashic-patch/src/input/pointer/: cancel.rs  down.rs  enter.rs  leave.rs  left.rs  moved.rs  up.rs
bevy-akashic-patch/src/input/touch/: cancel.rs  end.rs  moved.rs  start.rs
bevy-akashic-patch/src/winit/: converters.rs
bevy-akashic/src/: command.rs  component.rs  event.rs  extensions.rs  lib.rs  plugin.rs  run_criteria.rs
bevy-akashic/src/command/: audio.rs
bevy-akashic/src/command/audio/: play.rs
bevy-akashic/src/component/: object2d.rs  player_id.rs  scene.rs  text.rs
bevy-akashic/src/component/object2d/: anchor.rs  entity.rs  entity_size.rs  touchable.rs
bevy-akashic/src/component/object2d/entity/: entity_bundle.rs  filled_rect.rs  label.rs  sprite.rs
bevy-akashic/src/event/: event_inner.rs  join.rs  message.rs  point.rs  point_down.rs  point_move.rs  point_up.rs
bevy-akashic/src/event/message/: raise_event.rs  request_raise_event.rs
bevy-akashic/src/event/point/: down.rs  event_inner.rs  move.rs  up.rs
bevy-akashic/src/plugin/: akashic_3d.rs  akashic_3d2.rs  append.rs  asset.rs  despawn.rs  event.rs  feed.rs  game_info.rs  join.rs  modify.rs  player_id.rs  random.rs  request_snapshot.rs  scene.rs  schedule_runner.rs  shader.wgsl  snapshot.rs  system_set.rs  webgl.rs  winit.rs
bevy-akashic/src/plugin/akashic_3d/: buffer.rs  sprite.rs
bevy-akashic/src/plugin/event/: pbr.rs  point_down.rs
bevy-akashic/src/plugin/feed/: entity_object2d.rs  filled_rect.rs  label.rs
bevy-akashic/src/resource/: game.rs  game_score.rs  random.rs
examples/: akashic3d.rs  akashic3d_with_default.rs  akashic_3d_with_default.rs  akashic_sample.rs  hello.rs  hello_world.rs  sample.rs  state.rs
examples/audio/: play_audio.rs
examples/entity/: filled_rect.rs  sprite.rs
examples/event/: point_down.rs  point_move.rs  point_up.rs
examples/scene/: next_scene.rs
game/: package.json
src/: error.rs  event.rs  font.rs  game.rs  lib.rs  log.rs  main.rs  math.rs  object2d.rs  player.rs  random.rs  resource_factory.rs  scene.rs  shader.rs  trigger.rs  util.rs
src/asset/: accessor.rs  audio.rs  binary.rs  image.rs  src.rs  surface.rs  text.rs
src/event/: join.rs  message.rs  point.rs
src/font/: dynamic.rs  font_family.rs  surface_atlas_set.rs
src/game/: vars.rs
src/math/: common_offset.rs
src/object2d/: entity.rs
src/scene/: param.rs
src/trigger/: join.rs  load.rs  message.rs  on_load.rs  point.rs  update.rs
(+42 files in other folders)
