[package]
name = "akashic"
version = "0.1.0"
edition = "2021"

[lib]


[[example]]
name = "hello_world"
path = "examples/hello_world.rs"


[[example]]
name = "akashic_sample"
path = "examples/akashic_sample.rs"



[workspace]
members = [
    "akashic-macro",
]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
js-sys = { version = "0.3.64" }
serde-wasm-bindgen = "0.6.0"
auto-delegate = "0.0.9"
derive_builder = "0.12.0"
once_cell = "1.18.0"
anyhow = "1.0.75"
thiserror = "1.0.48"
web-sys = { version = "0.3.64", features = ["HtmlCanvasElement"] }
paste = "1.0.14"
akashic-macro = { path = "./akashic-macro", version = "0.1" }
bevy_reflect = {version = "0.11.3", optional = true }


[features]
default = ["bevy"]
bevy = ["bevy_reflect"]


