[package]
name = "akashic"
version = "0.0.0"
edition = "2021"
description = "Provides you Library that implements binding for the Akashic Engine"
exclude = ["assets/", "crates"]
readme = "README.md"
keywords = ["game", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "akashic-macro",
]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "akashic_sample"
path = "examples/akashic_sample.rs"

[[example]]
name = "play_audio"
path = "examples/audio/play_audio.rs"

[dependencies]
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
js-sys = { version = "0.3.64" }
serde-wasm-bindgen = "0.6.0"
auto-delegate = "0.0.9"
derive_builder = "0.12.0"
once_cell = "1.18.0"
anyhow = "1.0.75"
thiserror = "1.0.48"
paste = "1.0.14"
akashic-macro = { path = "./akashic-macro", version = "0.1" }





