[package]
name = "akashic-rs"
version = "0.1.0"
edition = "2021"

[lib]


[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
paste = { workspace = true }
auto-delegate = { workspace = true }
akashic-macro = { path = "../akashic-macro" }
derive_builder = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
web-sys = { version = "0.3.64", features = ["HtmlCanvasElement"] }