[package]
name = "bevy-akashic-patch"
version = "0.1.0"
edition = "2021"


[lib]


[dependencies]
bevy = { workspace = true }
bevy-akashic = { path = "../bevy-akashic" }
akashic = { path = "../akashic" }
anyhow = { worksapce = true }
wasm-bindgen = { workspace = true }
raw-window-handle = "0.5.2"
web-sys = { version = "0.3.64", features = [
    'Document',
    'Element',
    'HtmlElement',
    "HtmlCanvasElement",
    'Node',
    'Window',
    "HtmlStyleElement",
    "PointerEvent",
    "MouseEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "DomRect",
    "WheelEvent",
    "FocusEvent",
    "PointerEventInit",
] }
paste = { workspace = true }

serde = { version = "1.0.188", features = ["derive"] }
bevy_mod_raycast = "0.13.1"
bevy_rapier3d = "0.22.0"

bevy_mod_picking = { version = "0.15.0", default-features = false, features = ["backend_raycast"], optional = true }


[features]
default = []
picking = ["bevy_mod_picking"]