[package]
name = "bevy-akashic-patch"
version = "0.1.0"
edition = "2021"


[lib]


[dependencies]
bevy = { version = "0.11.3", default-features = false }
bevy-akashic = { path = "../bevy-akashic" }
akashic = { path = "../akashic" }
anyhow = { worksapce = true }
wasm-bindgen = { workspace = true }
raw-window-handle = "0.5.2"
web-sys = { version = "0.3.64", features = [
    'Document',
    'Element',
    'HtmlElement',
    "HtmlCanvasElement",
    'Node',
    'Window',
    "HtmlStyleElement",
    "PointerEvent",
    "MouseEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "DomRect",
    "WheelEvent",
    "FocusEvent",
    "PointerEventInit",
] }
paste = { workspace = true }

serde = { version = "1.0.188", features = ["derive"] }
bevy_mod_raycast = "0.13.1"
bevy_rapier3d = "0.22.0"

bevy_mod_picking = { version = "0.15.0", default-features = false, features = ["backend_raycast"], optional = true }


[features]
default = [
    "asset",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy/webgl2",
    "bevy/vorbis",
    "bevy/png",
    "bevy/jpeg",
]
picking = ["bevy_mod_picking"]
asset = ["bevy/bevy_asset"]
debug_asset_server = ["bevy/debug_asset_server"]
bevy_scene = ["bevy/bevy_scene"]
bevy_render = ["bevy/bevy_render"]
bevy_core_pipeline = ["bevy/bevy_core_pipeline"]
bevy_sprite = ["bevy/bevy_sprite"]
bevy_text = ["bevy/bevy_text"]
bevy_ui = ["bevy/bevy_ui"]
bevy_pbr = ["bevy/bevy_pbr"]
bevy_gltf = ["bevy/bevy_gltf"]
bevy_audio = ["bevy/bevy_audio"]
bevy_gilrs = ["bevy/bevy_gilrs"]
bevy_animation = ["bevy/bevy_animation"]
bevy_gizmos = ["bevy/bevy_gizmos"]

