[package]
name = "bevy-akashic-patch"
version = "0.1.0"
edition = "2021"


[lib]


[dependencies]
bevy = { version = "0.11.3", default-features = false }
bevy-akashic = { path = "../bevy-akashic" }
akashic = { path = "../akashic" }
anyhow = { worksapce = true }
wasm-bindgen = { workspace = true }
raw-window-handle = "0.5.2"
paste = { workspace = true }
serde = { version = "1.0.188", features = ["derive"] }


web-sys = { version = "0.3.64", features = [
    'Document',
    'Element',
    'HtmlElement',
    "HtmlCanvasElement",
    'Node',
    'Window',
    "HtmlStyleElement",
    "PointerEvent",
    "MouseEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "DomRect",
    "WheelEvent",
    "FocusEvent",
    "PointerEventInit",
] }

bevy_mod_picking = { version = "0.15.0", default-features = false, features = ["backend_raycast"], optional = true }
bevy_mod_raycast = {version = "0.13.1", optional = true}
bevy_rapier3d = {version = "0.22.0", optional = true}

[features]
default = []
picking = ["bevy_mod_picking"]
input_rapier3d = ["bevy_rapier3d"]
input_raycast = ["bevy_mod_raycast"]
