[package]
name = "bevy-akashic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
anyhow = { workspace = true }
akashic = { path = "../akashic" }
bevy = { workspace = true }
wasm-bindgen = { workspace = true }
auto-delegate = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }
wgpu = { version = "0.16.0", optional = true, features = ["webgl"] }
web-sys = { version = "0.3.64", optional = true, features = [
    'Document',
    'Element',
    'HtmlElement',
    "HtmlCanvasElement",
    'Node',
    'Window',
    "HtmlStyleElement"
] }
winit = "0.28.6"
bytemuck = { version = "1.14.0", features = ["derive"] }
image = { version = "0.24.7", features = ["png"] }
bevy_mod_raycast = { workspace = true }
bevy_rapier3d = "0.22.0"
serde_json = "1.0.107"
bevy_save = "0.9.1"

[features]
default = []
3d = ["dep:wgpu", "dep:web-sys"]