[package]
name = "bevy-akashic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
anyhow = { workspace = true }
akashic = { path = "../akashic" }
bevy = { workspace = true }
wasm-bindgen = { workspace = true }
auto-delegate = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }

web-sys = { version = "0.3.64", optional = true, features = [
    'Document',
    'Element',
    'HtmlElement',
    "HtmlCanvasElement",
    'Node',
    'Window',
    "HtmlStyleElement"
] }


bevy_mod_raycast = { workspace = true }
bevy_rapier3d = "0.22.0"
serde_json = "1.0.107"
bevy_save = "0.9.1"

[features]
default = []
