[package]
name = "bevy-akashic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
anyhow = { workspace = true }
akashic = { path = "../akashic" }
bevy = { version = "0.11.3", default-features = false }
wasm-bindgen = { workspace = true }
auto-delegate = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }
serde_json = "1.0.107"

bevy_save = { version = "0.9.1", optional = true }


[features]
default = []
snapshot = ["bevy_save"]